<resources>
    <string name="app_name">HallymMap</string>

    <!--  Common  -->
    <string name="yes">Yes</string>
    <string name="no">no</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="open">Open</string>
    <string name="proceed">Proceed</string>
    <string name="granted">Permission granted</string>
    <string name="denied">Permission denied</string>

    <!--  MainActivity  -->
    <string name="bottom_nav_current">Map</string>
    <string name="bottom_nav_my_place">My Places</string>
    <string name="bottom_nav_recommend">Recommend</string>
    <string name="bottom_nav_more">More</string>
    <string name="update_started">Updating data</string>
    <string name="bottom_sheet_favorite">Like</string>
    <string name="bottom_sheet_located_in">Located in &lt;building&gt;</string>
    <string name="bottom_sheet_locate">Location: </string>
    <string name="bottom_sheet_type">Facility type: </string>

    <!--  ApplicationPermissionManager  -->
    <string name="permission_deny">Deny</string>
    <string name="permission_allow">Allow</string>
    <string name="permission_location">Location</string>
    <string name="permission_location_explain">&lt;app_name&gt; requests location permission to help you find exact location.</string>
    <string name="permission_location_explain_again">Location features are disabled.</string>
    <string name="permission_change">Change</string>

    <!--  MapFragment  -->
    <string name="map_fab_search">Search</string>

    <!--  MoreFragment  -->
    <string name="more_user_default_name">User</string>
    <string name="more_section_application">Application</string>
    <string name="more_licenses">Licenses</string>
    <string name="more_section_data">Data Management</string>
    <string name="more_privacy_policy">Privacy Policy</string>
    <string name="more_privacy_policy_message">Privacy policy is provided via our Github. Would you like to open the link?</string>
    <string name="more_delete_favorite">Delete favorites</string>
    <string name="more_delete_favorite_message">Would you like to delete all your preferences?\n\nThis work is irreversible.</string>
    <string name="more_delete_all">Delete all data</string>
    <string name="more_delete_all_message">Would you like to delete all data?\n\nThis work includes removing your preferences, as well as application data, and it is irreversible.</string>
    <string name="more_section_report">Report</string>
    <string name="more_report_issue">Report issue</string>
    <string name="more_report_place">Report place</string>
    <string name="more_change_log">Change log</string>
    <string name="more_dev_menu">Developer Menu</string>
    <string name="more_report_issue_content">Would you like to open the service link?</string>
    <string name="more_report_place_content">Would you like to open the service link?</string>

    <!--  SearchActivity  -->
    <string name="search_place_holder">Lecture room, building name, …</string>
    <string name="search_building">Searching building</string>
    <string name="search_facility">Searching facility</string>
    <string name="search_lecture_room">Searching lecture room</string>
    <string name="search_facility_related_description">&lt;name&gt;, &lt;floor&gt;f</string>
    <string name="search_facility_default_description">No nearby information.</string>
    <string name="search_reason_name">The name contains the keyword.</string>
    <string name="search_reason_tag">The keyword seems to describe this facility.</string>
    <string name="search_reason_lecture_room">Lecture room number</string>
    <string name="search_reason_lecture_room_building">The lecture room may be in this building.</string>
    <string name="search_reason_type">The type of the facility</string>
    <string name="search_lecture_room_building">Building\nNo.</string>
    <string name="search_lecture_room_floor">Floor\n</string>
    <string name="search_lecture_room_number">Room\nNo.</string>
    <string name="search_lecture_room_unit">Unit\n</string>
    <string name="search_not_found">No search results</string>

    <!--  FavoriteFragment  -->
    <string name="favorite_empty">No favorite places.\n\nPress ♥ on map to register favorite places.</string>

    <!--  Place  -->
    <!--  Facility  -->
    <string name="facility_cafe">Cafe</string>
    <string name="facility_study_room">Study room</string>
    <string name="facility_convenience_store">Convenience Store</string>
    <string name="facility_book_store">Book Store</string>
    <string name="facility_stationery_store">Stationery</string>
    <string name="facility_atm">ATM</string>
    <string name="facility_cafeteria">Cafeteria</string>
    <string name="facility_printer">Printer</string>
    <string name="facility_post">Post Office</string>
    <string name="facility_vending_machine">Vending Machine</string>
    <string name="facility_etc">Etc</string>

    <!--  Content descriptions  -->
    <string name="des_main_fab">Find button</string>
    <string name="des_row_more_user_img">User Image</string>
    <string name="des_row_section_button">Section Button</string>

</resources>