<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/bg_secondary"
        android:elevation="16dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/layoutSearchLectureRoomPre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtSearchLectureRoomPre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="56sp"
                    tools:text="A">

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutSearchLectureRoomBuilding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:layout_margin="4dp"
                android:background="@color/highlight_pink_bg"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtSearchLectureRoomBuilding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="56sp"
                    tools:text="45">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/search_lecture_room_building"
                    android:textSize="12sp">

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutSearchLectureRoomFloor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:layout_margin="4dp"
                android:background="@color/highlight_green_bg"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtSearchLectureRoomFloor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="56sp"
                    tools:text="1">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/search_lecture_room_floor"
                    android:textSize="12sp">

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutSearchLectureRoomNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:padding="4dp"
                android:background="@color/highlight_yellow_bg"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtSearchLectureRoomNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="56sp"
                    tools:text="63">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/search_lecture_room_number"
                    android:textSize="12sp">

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutSearchLectureRoomUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:layout_margin="4dp"
                android:background="@color/highlight_blue_bg"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtSearchLectureRoomUnit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="56sp"
                    tools:text="-02">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/search_lecture_room_unit"
                    android:textSize="12sp">

                </TextView>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>